objects/FINS_Banking_Customer_Survey__c.object
<CustomObject>
    <fields>
        <fullName>CSAT__c</fullName>
        <description>Turns the field &quot;CSAT Score&quot; into a number that can be averaged.</description>
        <formula>IF(CONTAINS(TEXT(Question_2__c), &quot; - &quot;),
VALUE(LEFT(TEXT(Question_2__c), FIND(&quot; - &quot;, TEXT(Question_2__c)) - 1)),
VALUE(TEXT(Question_2__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSAT</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Customer Surveys</relationshipLabel>
        <relationshipName>Customer_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Surveys</relationshipLabel>
        <relationshipName>Customer_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <description>Turns the field &quot;Effortless Experience?&quot; into a number that can be averaged.</description>
        <formula>VALUE(LEFT(TEXT(Question_1__c), 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effort</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <description>Turns the field &quot;NPS Score&quot; into a number that can be averaged.</description>
        <formula>IF(CONTAINS(TEXT(Question_3__c), &quot; - &quot;),
VALUE(LEFT(TEXT(Question_3__c), FIND(&quot; - &quot;, TEXT(Question_3__c)) - 1)),
VALUE(TEXT(Question_3__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_1__c</fullName>
        <inlineHelpText>To what extent do you agree or disagree with the following statement:

The company made it easy for me to handle my issue.</inlineHelpText>
        <label>Effortless Experience?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>2 - Disagree</fullName>
                </value>
                <value>
                    <fullName>3 - Somewhat Disagree</fullName>
                </value>
                <value>
                    <fullName>4 - Neither Agree Nor Disagree</fullName>
                </value>
                <value>
                    <fullName>5 - Somewhat Agree</fullName>
                </value>
                <value>
                    <fullName>6 - Agree</fullName>
                </value>
                <value>
                    <fullName>7 - Strongly Agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_2__c</fullName>
        <inlineHelpText>How would you rate your overall satisfaction with your customer service experience?</inlineHelpText>
        <label>CSAT Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Very Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>2 - Not Satisfied</fullName>
                </value>
                <value>
                    <fullName>3 - Neutral</fullName>
                </value>
                <value>
                    <fullName>4 - Satisfied</fullName>
                </value>
                <value>
                    <fullName>5 - Very Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_3__c</fullName>
        <inlineHelpText>How likely is it that you would recommend this company to a friend or colleague?</inlineHelpText>
        <label>NPS Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Not at all likely</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10 - Extremely Likely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UCIN_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Cloud Explorer External ID field used to track IDs between systems.</description>
        <externalId>true</externalId>
        <label>UCIN External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Customer Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Case__c</columns>
        <columns>Question_2__c</columns>
        <columns>Question_1__c</columns>
        <columns>Question_4__c</columns>
        <columns>Question_3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Customer Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>